# mentik_dapp

./: .gitignore  Anchor.toml  Cargo.toml  DEVELOPER.md  README.md  package.json  vercel.json
app/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
app/scripts/: devnet_flow.mjs
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/health/: route.ts
app/src/app/api/portfolio/: route.ts
app/src/app/api/prices/: route.ts
app/src/app/api/strategies/: route.ts
app/src/app/history/: page.tsx
app/src/app/wallet/: page.tsx
app/src/app/yield/: page.tsx
app/src/components/: MeshBackground.tsx  PoolDashboard.tsx  WalletProvider.tsx
app/src/components/portfolio/: BalanceCard.tsx  Dashboard.tsx
app/src/components/providers/: WalletProvider.tsx
app/src/components/ui/: Navbar.tsx  Spinner.tsx
app/src/components/yield/: DepositModal.tsx  StrategyCard.tsx
app/src/hooks/: usePortfolio.ts  usePrices.ts  useStrategies.ts
app/src/idl/: mentik_sol_pool.json
app/src/lib/: anchor.ts  constants.ts  pdas.ts  solana.ts  types.ts
app/src/stores/: appStore.ts
programs/mentik_sol_pool/: Cargo.toml
programs/mentik_sol_pool/src/: constants.rs  error.rs  instructions.rs  lib.rs  rewards.rs  state.rs
programs/mentik_sol_pool/src/instructions/: claim_mentik.rs  deposit_sol.rs  initialize.rs  migrate_stake.rs  migrate_stake_account.rs  sync_pool.rs  withdraw_sol.rs
scripts/: devnet_flow.mjs
tests/: mentik-router.ts
tests/integration/: Cargo.toml
tests/integration/tests/: stake_pool_litesvm.rs
