[package]
name = "mentik_sol_pool"
version = "0.1.0"
description = "MENTIK SOL Pool — shared daily MENTIK emissions for SOL stakers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mentik_sol_pool"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-clock = "2.2.2"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-pubkey = "2.2.1"
spl-token = "7.0.0"
anchor-spl = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
